--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,13 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/main_floating_action_btn"
-            style="@style/style_float_btn"
-            android:layout_marginBottom="@dimen/dp_60"
-            android:layout_marginEnd="@dimen/dp_16"
-            android:src="@mipmap/icon_up_arrow"
-            app:layout_behavior="@string/scale_down_show_behavior" />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/main_floating_action_btn"-->
+<!--            style="@style/style_float_btn"-->
+<!--            android:layout_marginBottom="@dimen/dp_60"-->
+<!--            android:layout_marginEnd="@dimen/dp_16"-->
+<!--            android:src="@mipmap/icon_up_arrow"-->
+<!--            app:layout_behavior="@string/scale_down_show_behavior" />-->
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation_view"
