--- a/app/src/main/res/layout/wx_article_fragment.xml
+++ b/app/src/main/res/layout/wx_article_fragment.xml
@@ -13,15 +13,15 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.slidingpanelayout.widget.SlidingPaneLayout
-            android:id="@+id/wx_detail_tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_48"
-            android:background="@color/colorPrimary"
-            app:tl_textAllCaps="false"
-            app:tl_textBold="BOTH"
-            app:tl_textsize="@dimen/sp_14"
-            android:visibility="invisible" />
+<!--        <androidx.slidingpanelayout.widget.SlidingPaneLayout-->
+<!--            android:id="@+id/wx_detail_tab_layout"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/dp_48"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            app:tl_textAllCaps="false"-->
+<!--            app:tl_textBold="BOTH"-->
+<!--            app:tl_textsize="@dimen/sp_14"-->
+<!--            android:visibility="invisible" />-->
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/wx_detail_viewpager"
