--- a/app/src/main/res/layout/launch_fragment.xml
+++ b/app/src/main/res/layout/launch_fragment.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/icon_wan_android"
     android:orientation="vertical"
-    tools:context=".ui.main.splash.SplashActivity">
+    tools:layout_editor_absoluteY="@dimen/dp_25"
+    tools:context=".ui.main.launch.LaunchFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/one_animation"
@@ -97,4 +98,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
