--- a/app/src/main/res/layout/wx_article_fragment.xml
+++ b/app/src/main/res/layout/wx_article_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.wx.WxArticleFragment">
+    tools:context=".ui.wx.article.WxArticleFragment">
 
     <LinearLayout
         android:id="@+id/normal_view"
@@ -13,22 +13,23 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-<!--        <androidx.slidingpanelayout.widget.SlidingPaneLayout-->
-<!--            android:id="@+id/wx_detail_tab_layout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="@dimen/dp_48"-->
-<!--            android:background="@color/colorPrimary"-->
-<!--            app:tl_textAllCaps="false"-->
-<!--            app:tl_textBold="BOTH"-->
-<!--            app:tl_textsize="@dimen/sp_14"-->
-<!--            android:visibility="invisible" />-->
+        <com.example.library.tablayout.SlidingTabLayout
+            android:id="@+id/wx_detail_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_48"
+            android:background="@color/colorPrimary"
+            android:visibility="invisible"
+            app:tl_textAllCaps="false"
+            app:tl_textBold="BOTH"
+            app:tl_textsize="@dimen/sp_14" />
+
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/wx_detail_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
     </LinearLayout>
 
